fix(mobile layout): 모바일에서 오른쪽 마진 생기는 현상 수정, overflow button position changed, profile image size changed

--- a/themes/classting/source/css/_partial/header.styl
+++ b/themes/classting/source/css/_partial/header.styl
@@ -15,4 +15,7 @@
   margin: 0 1em
 
   @media (max-width: 992px)
-    margin: 0;
+    margin: 0
+
+.navbar-toggler-right
+  right: 0
