--- a/themes/classting/source/css/_partial/index.styl
+++ b/themes/classting/source/css/_partial/index.styl
@@ -100,3 +100,7 @@
 
   a
     color: color-grey-100
+
+  @media (max-width: 575px)
+    figure
+      max-width: 160px
