--- a/themes/classting/source/css/style.styl
+++ b/themes/classting/source/css/style.styl
@@ -1,6 +1,9 @@
 @import "_variables"
 @import "_extend"
 
+html body
+  overflow-x: hidden
+
 body
   padding-top: 60px
 
